# PackingOptimization

./: .gitignore  BruteForceSolver.cpp  BruteForceSolver.h  CMakeLists.txt  DynamicSolver.cpp  DynamicSolver.h  GreedySolver.cpp  GreedySolver.h  ILPSolver.cpp  ILPSolver.h  Logger.h  Menu.cpp  Menu.h  README.md  Reader.h  SolverResult.h  knapsack_solver.py  main.cpp  performance_data.csv  performance_plot.py
datasets-extra/: OptimalSolution_05.txt
html/: _brute_force_solver_8cpp.html  _brute_force_solver_8h.html  _brute_force_solver_8h.js  _brute_force_solver_8h_source.html  _dynamic_solver_8cpp.html  _dynamic_solver_8h.html  _dynamic_solver_8h.js  _dynamic_solver_8h_source.html  _greedy_solver_8cpp.html  _greedy_solver_8h.html  _greedy_solver_8h.js  _greedy_solver_8h_source.html  _i_l_p_solver_8cpp.html  _i_l_p_solver_8h.html  _i_l_p_solver_8h.js  _i_l_p_solver_8h_source.html  _logger_8h.html  _logger_8h.js  _logger_8h_source.html  _menu_8cpp.html  _menu_8h.html  _menu_8h_source.html  _reader_8h.html  _reader_8h.js  _reader_8h_source.html  _solver_result_8h.html  _solver_result_8h.js  _solver_result_8h_source.html  annotated.html  annotated_dup.js  class_brute_force_solver-members.html  class_brute_force_solver.html  class_dynamic_solver-members.html  class_dynamic_solver.html  class_greedy_solver-members.html  class_greedy_solver.html  class_i_l_p_solver-members.html  class_i_l_p_solver.html  class_logger-members.html  class_logger.html  (+22 more)
latex/: _brute_force_solver_8cpp.tex  _brute_force_solver_8h.tex  _brute_force_solver_8h_source.tex  _dynamic_solver_8cpp.tex  (+31 more)
(+29 files in other folders)
